--- a/bios/Makefile.in
+++ b/bios/Makefile.in
@@ -52,7 +52,7 @@ BIOS_BUILD_DATE = "-DBIOS_BUILD_DATE=\"$(BUILDDATE)\""
 	$(CXX) -c $(BX_INCDIRS) $(CXXFLAGS) $(LOCAL_CXXFLAGS) @CXXFP@$< @OFP@$@
 
 
-bios: biossums BIOS-bochs-latest BIOS-bochs-legacy
+bios: biossums BIOS-bochs-legacy
 
 clean:
 	@RMCOMMAND@ *.o *.a *.s _rombios*_.c rombios*.txt rombios*.sym
@@ -87,15 +87,15 @@ rombios16.bin: rombios.c apmbios.S biossums rombios.h
 	@RMCOMMAND@ _rombios_.s
 
 
-rombios32.bin: rombios32.out rombios.h
-	objcopy -O binary $< $@
-	./biossums -pad $@
+# rombios32.bin: rombios32.out rombios.h
+# 	objcopy -O binary $< $@
+# 	./biossums -pad $@
 
-rombios32.out: rombios32start.o rombios32.o rombios32.ld
-	ld -o $@ -T $(srcdir)/rombios32.ld rombios32start.o rombios32.o
+# rombios32.out: rombios32start.o rombios32.o rombios32.ld
+# 	ld -o $@ -T $(srcdir)/rombios32.ld rombios32start.o rombios32.o
 
-rombios32.o: rombios32.c acpi-dsdt.hex rombios.h
-	$(GCC32) -O2 -Wall -c -o $@ $<
+# rombios32.o: rombios32.c acpi-dsdt.hex rombios.h
+# 	$(GCC32) -O2 -Wall -c -o $@ $<
 
 ifeq ("1", "0")
 acpi-dsdt.hex: acpi-dsdt.dsl
@@ -105,10 +105,10 @@ acpi-dsdt.hex: acpi-dsdt.dsl
 	sed -i -e's/^unsigned/const unsigned/' $@
 endif
 
-rombios32start.o: rombios32start.S
-	$(GCC32) -c -o $@ $<
+# rombios32start.o: rombios32start.S
+# 	$(GCC32) -c -o $@ $<
 
-BIOS-bochs-latest: rombios16.bin rombios32.bin
-	cat rombios32.bin rombios16.bin > $@
+# BIOS-bochs-latest: rombios16.bin rombios32.bin
+# 	cat rombios32.bin rombios16.bin > $@
 
 biossums: biossums.o
